# explode-js

./: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .ocamlformat  CHANGES.md  CODEOWNERS  Dockerfile  Dockerfile-fast  LICENSE  README.md  build-NodeMedic-container.sh  cliff.toml  dune-project  example.envrc  exec.js  explode_js-instrumentation.opam  explode_js-runner.opam  explode_js-runner.opam.template  explode_js.opam  explode_js.opam.template  nodeMedic-bench-install.sh  requirements.txt  retriever.py  run-NodeMedic.py  run-cwe1321.sh  run-cwe78.sh  run-cwe94.sh  run-fast.py  run-no-vis.sh  run_explode-js.sh  run_explode-js_cwe1321.sh  run_explode-js_cwe22.sh  run_explode-js_cwe78.sh  run_explode-js_cwe94.sh  run_explode-js_no-lazy-values.sh  run_explode-js_no-vis.sh  run_explode-js_zeroday.sh  setup.ml  setup.sh  (+9 more)
.github/workflows/: build.yml  build.yml.disabled  docker-image.yml  jekyll-gh-pages.yml
bench/: README.md  code-injection.json  command-injection.json  dune  explode-res-20240925T135331.csv  explode-res-20240929T012449.csv  explode-vulcan-results.csv  explode-vulcan-secbench-results.csv  fast-vulcan-secbench-results.csv  fast-zeroday.csv  main.ml  nodeMedic-bench-install.sh  nodemedic-vulcan-secbench-results.csv  nodemedic-vulcan-zeroday.csv  requirements.txt  retriever.py  run-fast.py  run_explode-js.sh  run_explode-js_cwe1321.sh  run_explode-js_cwe22.sh  run_explode-js_cwe78.sh  run_explode-js_cwe94.sh  run_explode-js_no-lazy-values.sh  run_explode-js_no-vis.sh  run_explode-js_zeroday.sh  runner.ml  table_explode-js.py  table_explode-js2.py  table_explode-js_time.py  table_explode-js_zeroday.py  table_fast_time.py  table_nodemedic.py  vulcan-22-78-94-471-1321-all.json
bench/CWEBench.js/: code-injection.json  command-injection.json  path-traversal.json  prototype-pollution.json  redos.json
bench/plots/: cdf.ml  cdf.py  dune  explode_df.ml  fast_df.ml  file.ml  file.mli  marker.ml  nodemedic_df.ml  rq1_effectiveness.py  rq1_histogram.py  rq1_venn.py  rq3_cdf.py  rq3_cdf_exploit.py  rq3_cdf_finish.py  rq3_perf_table.py  rq4_components.py  sinks.py  utils.py
bench/runner2/: cmd_run.ml  cmd_web.ml  cwe.ml  dune  index.ml  index_vulcan.ml  json_index.ml  main.ml  package.ml  run_metadata.ml  run_proc.ml  run_proc_result.ml  run_result.ml  runner.ml  share.ml  syntax.ml  templates.ml  vulnerability.ml
bench/runner2/templates/: 404.html  index.html  results.html
doc/: conventions.md
example/: README.md  dune  running-example.js  taint_summary.json
example/case-study-1/: taint_summary.json
example/case-study-2/: compass.js  taint_summary-bundle.js  taint_summary.json
example/code-injection/: README.md  dune  package.json
example/command-injection/: README.md  dune  index.js
example/package/: index.js  utils.js
example/package-example/: README.md  dune  package.json
example/path-traversal/: README.md  dune  index.js
example/prototype-pollution/: README.md  dune  index.js
example/running-example/: index.js  output.txt
scripts/: lint.sh  setup.ml
share/: code.ebnf  command.ebnf  dune  shell.ebnf  sql.ebnf
src/: dune  esl_symbolic.js  explode_js_prelude.ml  exploit_patterns.ml  graphjs.ml  replay.ml  sym_exec.ml  sym_failure.ml  sym_failure_type.ml  sym_path_resolver.ml  sym_result.ml
src/core/: analysis_results.ml  cli.ml  cmd_run.ml  cmd_version.mli  dune  exploit_patterns.ml  graphjs.ml  heuristics.ml  replay.ml  replay_effect.ml  settings.ml  sites.ml  static_analysis.ml  sym_exec.ml  sym_failure.ml  sym_path_resolver.ml  taint_analysis.ml  utils.ml
src/generator/: dune  exploit_templates.ml  model.ml  scheme.ml  template.ml  test.ml  value.ml  vuln_type.ml
src/injector/: call_graph.ml  dune  lexer.ml  main.ml  parse.ml  parser.mly  rule.ml  smt_encoder.ml  transform.ml
src/instrument/: dune  exploit_templates.ml  instrument_result.ml  lit_tmpl.ml  model.ml  run.mli  scheme.ml  scheme_pp.ml  sym_tmpl.ml  template.ml  test.ml  util.ml  vuln.ml  vuln.mli  vuln_intf.ml  vuln_symbolic.ml  vuln_type.ml
src/instrumentation/: dune  main.ml  model.ml  result.ml  run.ml  run.mli  syntax.ml  template.ml  templates.ml  value.ml  vuln.ml  vuln_intf.ml  vuln_literal.ml  vuln_parser.ml  vuln_parser.mli  vuln_symbolic.ml  vuln_type.ml
src/parser/: dune  lexer.ml  parse.ml  parser.ml  state.ml  token.ml
src/prelude/: dune  explode_js_prelude.ml  std.ml
src/runner/: cmd_run.ml  cmd_web.ml  db.ml  dune  main.ml  run_action.ml  run_metadata.ml  run_mode.ml  run_proc.ml  run_proc_result.ml  run_result.ml  syntax.ml  vulnerability.ml
src/runner/templates/: index.html  output.html
test/: client_sink_http.js  dune  test_explode.t  test_full_pp.js  test_lazy_1.js  test_lazy_2.js  test_lazy_3.js  test_pollution_1.js  test_proto.js  test_sink_eval.js  test_sink_fs.js  test_sink_http.js  test_sink_http.json  test_timeout.js  test_timeout.t  test_usecase_4.json  test_vfunexported.json  utils.js
test/exploit/: dune  test_exploit.t  test_pollution_2.js  test_pollution_3.js  test_pollution_4.js  test_sink_Function.js  test_sink_argv.js  test_sink_exec.js  test_timeout.t
test/injector/: binary.bnf  bnf.bnf  dune  mutual.bnf  small-js.bnf  test_break.ml  test_unfold.ml
test/injector/complete/: dune  test_basic.t
test/injector/unit/: dune  test_features.ml
test/injector/verify/: test_basic.t
test/instrument/: dune  test_literal.t  test_toy.t  test_unit.t
test/instrument/toy/: example-20.json  toplevel.js  toplevel.json  vfunpropofexportedobj.js  vfunretbyexport.json
test/instrument/unit/: array2.json  bool.json  function.json  identity.js  lazy_object.json  object.json  polluted_object3.json  symbolic_test_0_0_witness.json  union.json
test/instrumentation/: dune  test_literal.t  test_toy.t  test_unit.t
test/instrumentation/toy/: example-20.js  vfunexported.js  (+3 more)
test/parser/: dune  test_parser.ml
test/require/: index.js  myEval.js
test/run/: dune  test_http_client.js  test_http_server.js  test_http_server.json  test_run.t  test_usecase_4.js  test_usecase_4.json  test_vfunexported.js
test/test_simple/: taint_summary.json
(+14 files in other folders)
