(library
 (package explode_js)
 (name explode_js)
 (libraries
  bos
  dune-site
  ecma-sl
  explode_js-instrumentation
  fmt
  fpath
  yojson))

(generate_sites_module
 (module site)
 (sites explode_js))

(install
 (package explode_js)
 (section
  (site
   (explode_js nodejs)))
 (files
  (esl_symbolic.js as esl_symbolic.js)))
