(library
 (public_name explode_js.bench)
 (name explode_js_bench)
 (modules marker file)
 (libraries bos dune-glob fpath))

(executable
 (name fast_df)
 (libraries explode_js.bench owl)
 (modules fast_df))

(executable
 (name nodemedic_df)
 (libraries explode_js.bench owl yojson)
 (modules nodemedic_df))

(executable
 (name explode_df)
 (libraries explode_js.bench owl yojson)
 (modules explode_df))
