(executable
 (name main)
 (public_name runner)
 (package explode_js-runner)
 (modules
  cmd_run
  cmd_web
  db
  json_index
  main
  package
  run_action
  run_metadata
  run_proc
  run_proc_result
  run_result
  share
  syntax
  site
  vulnerability)
 (libraries
  cmdliner
  core_unix
  dune-site
  explode_js
  fpath
  fmt
  sqlite3
  sqlite3_utils
  jingoo
  tiny_httpd
  yojson))

(generate_sites_module
 (module site)
 (sites explode_js-runner))

(install
 (package explode_js-runner)
 (section
  (site
   (explode_js-runner templates)))
 (files
  (templates/index.html as index.html)
  (templates/results.html as results.html)
  (templates/output.html as output.html)
  (templates/404.html as 404.html)))

(install
 (package explode_js-runner)
 (section
  (site
   (explode_js-runner static)))
 (files
  (static/css/normalize.css as css/normalize.css)
  (static/css/skeleton.css as css/skeleton.css)))
