(library
 (name explode_js)
 (modules
  cwe
  exploit_patterns
  graphjs
  replay
  replay_effect
  site
  sites
  sym_exec
  sym_failure
  sym_path_resolver)
 (flags
  (:standard -open Explode_js_prelude))
 (libraries
  bos
  dune-site
  ecma-sl
  ecma-sl.symbolic
  extunix
  explode_js.instrument
  explode_js.prelude
  fmt
  fpath
  yojson))

(generate_sites_module
 (module site)
 (sites explode_js))

(install
 (package explode_js)
 (section
  (site
   (explode_js nodejs)))
 (files
  (esl_symbolic.js as esl_symbolic.js)))
